fix(dropzone): dropzone text alignment

--- a/src/dropzone/dropzone.css
+++ b/src/dropzone/dropzone.css
@@ -16,6 +16,7 @@
         right: 0;
         display: flex;
         align-items: center;
+        justify-content: center;
         text-align: center;
 
         font-size: var(--font-size-2xl);
